--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Android External Keyboard Layout Customization</title>
+    <style>
+        code {
+            margin: 0 2px;
+            padding: 0px 5px;
+            border: 1px solid #ddd;
+            background-color: #f8f8f8;
+            border-radius: 3px;
+        }
+    </style>
+    <script>
+        function setLayout(layout) {
+          document.getElementById("layout").value = layout;
+        }
+    </script>
 </head>
 <body>
 <h1>Android external keyboard customization</h1>
@@ -16,7 +30,7 @@
 <ol>
     <li>Customize your keyboard layout in the form below. Check out examples (above the form) or some instructions (below the form).</li>
     <li>Click Build & Download.</li>
-    <li>Download the app and install it. The app is self-signed so Android will warn you about untrusted source or something like this. Note: if you install the app second time (the previous one is already installed) and get an error, try to uninstall it first.</li>
+    <li>Download the app and install it. The app is self-signed so Android will warn you about untrusted source or something like this. Note: if you install the app and get an error, try to uninstall the previous version first, if you have any.</li>
     <li>Go to <code>Settings -> Language & input -> Physical keyboard</code>, choose the keyboard you want to customize, and select <code>Custom</code> layout.</li>
 </ol>
 
@@ -37,12 +51,12 @@
 <h2>How to customize keyboard layout</h2>
 <p>
     Keyboard layout is customized via <a target="_blank" href="https://source.android.com/devices/input/key-character-map-files">Key Character Map</a> file.
-    To remap a physical key use <code>map key KEY_CODE ANDROID_KEY</code> syntax where <code>KEY_CODE</code> is a code that produced by physical key and <code>ANDROID_KEY</code> is an Android key such as <code>ENTER</code>, <code>BRIGHTNESS_UP</code> or just plain character like <code>1</code> or <code>A</code>.
+    To remap a physical key use <code>map key KEY_CODE ANDROID_KEY</code> syntax where <code>KEY_CODE</code> is the code that produced by the physical key and <code>ANDROID_KEY</code> is an Android key such as <code>ENTER</code>, <code>BRIGHTNESS_UP</code> or just a plain character like <code>1</code> or <code>A</code>.
     All the default mappings for keys can be found in <a target="_blank" href="https://android.googlesource.com/platform/frameworks/base/+/master/data/keyboards/Generic.kl">Generic.kl</a> file in format <code>key KEY_CODE ANDROID_KEY</code>.
 </p>
 <p>
     Some keyboards have media-keys or other keys that don't work as expected. To remap them you should find out what key codes do they produce.
-    There are several Android apps to do it. For example <a target="_blank" href="https://play.google.com/store/apps/details?id=ru.elron.gamepadtester">Gamepad tester</a> (note that it uses 'scan code' to refer to key code).
+    There are several Android apps to do it. For example <a target="_blank" href="https://play.google.com/store/apps/details?id=ru.elron.gamepadtester">Gamepad tester</a> (note that it uses 'scan code' to refer to a key code).
 </p>
 <p>
     It's possible to define shortcuts (combinations with modifier keys like CTRL, ALT or SHIFT). Learn more in <a target="_blank" href="https://source.android.com/devices/input/key-character-map-files#how-key-combinations-are-mapped-to-behaviors">documentation</a>.
@@ -59,11 +73,5 @@
 <p>
     Contacts: <a href="mailto:ris58h@gmail.com">ris58h@gmail.com</a> <a target="_blank" href="https://github.com/ris58h">github.com/ris58h</a>
 </p>
-
-<script>
-function setLayout(layout) {
-  document.getElementById("layout").value = layout;
-}
-</script>
 </body>
 </html>
