Updated header & link to source code

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -20,7 +20,7 @@
     </script>
 </head>
 <body>
-<h1>Android external keyboard layout customization</h1>
+<h1>Android external keyboard layout customization without root</h1>
 <p>
     If you want to remap some keys on external keyboard on Android it can be done via <a target="_blank" href="https://source.android.com/devices/input/key-layout-files">Keyboard Layout</a> (.kl) or <a target="_blank" href="https://source.android.com/devices/input/key-character-map-files">Key Character Map</a> (.kcm) files, but it requires root access.
     It's possible though to do it without rooting. Since Android 4.1 an app can provide additional keyboard layouts (<a target="_blank" href="https://source.android.com/devices/input/key-character-map-files">Key Character Map</a> files). This project helps to build such app.
@@ -72,7 +72,9 @@
 <hr>
 
 <p>
-    Contacts: <a href="mailto:ris58h@gmail.com">ris58h@gmail.com</a> <a target="_blank" href="https://github.com/ris58h">github.com/ris58h</a>
+    Source code: <a target="_blank" href="https://github.com/ris58h/exkeymo-web">exkeymo-web</a>
+    <br/>
+    Contacts: <a href="mailto:ris58h@gmail.com">ris58h@gmail.com</a>
 </p>
 </body>
 </html>
