Example with ESCAPE

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -39,6 +39,8 @@
     <button onclick="setLayout('type OVERLAY')">Default</button>
     <button onclick="setLayout('type OVERLAY\n\nmap key 58 CTRL_LEFT')">Caps-Lock as Left Ctrl</button>
     <button onclick="setLayout('type OVERLAY\n\nmap key 58 CTRL_LEFT\nmap key 29 CAPS_LOCK')">Swap Caps-Lock and Left Ctrl</button>
+    <button onclick="setLayout('type OVERLAY\n\nmap key 58 ESCAPE')">Caps-Lock as Esc</button>
+    <button onclick="setLayout('type OVERLAY\n\nmap key 58 ESCAPE\nmap key 1 CAPS_LOCK')">Swap Caps-Lock and Esc</button>
 </div>
 <p>
     <textarea id="layout" name="layout" rows="20" required form="form" autocomplete="off" style="width: 100%;">type OVERLAY</textarea>
