--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -28,7 +28,7 @@
 <h2>How to</h2>
 <ol>
     <li>Customize KCM file in the form below. Check out <a href="#examples">examples</a> (above the form) and <a href="#instructions">instructions</a> (below the form).</li>
-    <li>Click Download. ExKeyMo will build the app for you.</li>
+    <li>Click <code>Download</code>. ExKeyMo will build the app for you.</li>
     <li>Download the app and install it. The app is self-signed so Android will warn you about untrusted source or something like this. Note: if you install the app and get an error, try to uninstall the previous version first, if you have any.</li>
     <li>Go to <code>Settings -> Language & input -> Physical keyboard</code> (the exact path may vary), choose the keyboard you want to customize, and select <code>Custom</code> layout.</li>
 </ol>
@@ -56,7 +56,7 @@
     All the default mappings for keys can be found in <a target="_blank" href="https://android.googlesource.com/platform/frameworks/base/+/master/data/keyboards/Generic.kl">Generic.kl</a> file in format <code>key KEY_CODE ANDROID_KEY</code>.
 </p>
 <p>
-    Some keyboards have media-keys or other keys that don't work as expected. To remap them you should find out what key codes do they produce.
+    Some keyboards have media-keys or other keys that don't work as expected. To remap them you should find out what key codes they produce.
     There are several Android apps to do it. For example <a target="_blank" href="https://play.google.com/store/apps/details?id=ru.elron.gamepadtester">Gamepad tester</a> (note that it uses 'scan code' to refer to a key code).
 </p>
 <p>
