--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -22,8 +22,9 @@
 <body>
 <h1>ExKeyMo - Android external keyboard layout customization without root</h1>
 <p>
-    Since Android 4.1 an app can provide additional keyboard layouts (<a target="_blank" href="https://source.android.com/devices/input/key-character-map-files">Key Character Map</a> files) which allow us to customize the keyboard layout without root access. This project helps you to build such app even if you don't know anything about Android development.
-</p>
+    Since Android 4.1 an app can provide additional keyboard layouts (<a target="_blank" href="https://source.android.com/devices/input/key-character-map-files">Key Character 
+Map</a> files). This adds ability to customize the keyboard layout without root access. This project helps you to build such app even if you don't know anything about Android 
+development. </p>
 
 <h2>How to</h2>
 <ol>
