--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -75,7 +75,7 @@ development. </p>
 <p>
     Source code: <a target="_blank" href="https://github.com/ris58h/exkeymo-web">exkeymo-web</a>
     <br/>
-    Contacts: <a href="mailto:ris58h@gmail.com">ris58h@gmail.com</a>
+    Contacts: <a href="mailto:ris58h+exkeymo@gmail.com">ris58h+exkeymo@gmail.com</a>
 </p>
 </body>
 </html>
