--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -51,7 +51,7 @@ development.
     <input type="submit" value="Download" form="form">
 </p>
 
-<h2>Customization</h2>
+<h2>Layout customization</h2>
 <p>
     The keyboard layout is customized using <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character Map file</a> syntax.
     To remap a physical key use <code>map key KEY_CODE ANDROID_KEY</code> syntax where <code>KEY_CODE</code> is the code that produced by the physical key and <code>ANDROID_KEY</code> is an Android key such as <code>ENTER</code>, <code>BRIGHTNESS_UP</code> or just a plain character like <code>1</code> or <code>A</code>.
