--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -24,7 +24,7 @@
 <h1>Android external keyboard remapping without root</h1>
 <p>
     Since Android 4.1 an app can provide additional keyboard layouts (<a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character 
-Map files</a>). Since than it's possible to customize a keyboard layout without root access by installing an app that contains requred layout. ExKeyMo helps you to build such app even if you don't know anything about Android 
+Map files</a>). Since then it's possible to customize a keyboard layout without root access by installing an app that contains requred layout. ExKeyMo helps you to build such app even if you don't know anything about Android 
 development.
 </p>
 
