Use APK from exkeymo_keyboard_layout project.

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,7 +6,7 @@
     <title>ExKeyMo - Android external keyboard remapping without root</title>
     <style>
         /* Style it because <code> looks ugly in Ghrome */
-        code {
+        code, kbd {
             margin: 0 2px;
             padding: 0px 5px;
             border: 1px solid #ddd;
@@ -24,16 +24,16 @@
 <h1>Android external keyboard remapping without root</h1>
 <p>
     Since Android 4.1 an app can provide additional keyboard layouts (<a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files">Key Character 
-Map files</a>). Since then it's possible to customize a keyboard layout without root access by installing an app that contains requred layout. ExKeyMo helps you to build such app even if you don't know anything about Android 
+Map files</a>). Since then, it's possible to customize a keyboard layout without root access by installing an app that contains requred layout. ExKeyMo helps you to build such app even if you don't know anything about Android
 development.
 </p>
 
 <h2>How to</h2>
 <ol>
     <li>Customize Key Character Map file content in the form below.
-    <li>Click <code>Download</code>. ExKeyMo will build the app for you.</li>
+    <li>Click <kbd>Download</kbd>. ExKeyMo will build the app for you.</li>
     <li>Download the app and install it. The app is self-signed so Android will warn you about untrusted source or something like this. Note: if you install the app and get an error, try to uninstall the previous version first, if you have any.</li>
-    <li>Go to <code>Settings -> Language & input -> Physical keyboard</code> (the exact path may vary), choose the keyboard you want to customize, and select <code>Custom</code> layout.</li>
+    <li>Go to <kbd>Settings -> Language & input -> Physical keyboard</kbd> (the exact path may vary), choose the keyboard you want to customize, and select <kbd>ExKeyMo</kbd> layout.</li>
 </ol>
 
 <form id="form" action="/" method="post"></form>
