--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -39,7 +39,7 @@ development.
     <li>Customize Key Character Map file content in the form below.
     <li>Click <kbd>Download</kbd>. ExKeyMo will build the app for you.</li>
     <li>Download the app and install it. The app is self-signed so Android will warn you about untrusted source or something like this. Note: if you install the app and get an error, try to uninstall the previous version first, if you have any.</li>
-    <li>Go to <kbd>Settings -> Language & input -> Physical keyboard</kbd> (the exact path may vary), choose the keyboard you want to customize, and select <kbd>ExKeyMo</kbd> layout.</li>
+    <li>Go to <kbd>Settings -> Language & input -> Physical keyboard</kbd> (the exact path may vary), choose the keyboard you want to customize, and select <kbd>ExKeyMo Layout</kbd>.</li>
 </ol>
 
 <p>
