--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,6 +12,7 @@
             border: 1px solid #ddd;
             background-color: #f8f8f8;
             border-radius: 3px;
+            overflow: scroll;
         }
     </style>
     <script>
