--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -14,6 +14,20 @@
             border-radius: 3px;
             overflow: scroll;
         }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+        }
+
+        textarea {
+            width: 100%;
+
+            white-space: pre;
+            overflow-wrap: normal;
+            overflow-x: scroll;
+        }
     </style>
     <script>
         function setLayout(layout) {
@@ -53,11 +67,15 @@ development.
 </p>
 
 <form id="form" action="/" method="post"></form>
-<textarea id="layout" name="layout" rows="20" required form="form" autocomplete="off" style="width: 100%;">type OVERLAY</textarea>
-<input type="checkbox" id="add-second-layout" onchange="showSecondLayout(this.checked)"/>
-<label for="add-second-layout">Add Second Layout</label><br/>
-<textarea id="layout2" name="layout2" rows="20" required disabled form="form" autocomplete="off" style="width: 100%;">type OVERLAY</textarea>
-<input type="submit" value="Download" form="form">
+<div class="container">
+    <textarea id="layout" name="layout" rows="20" required form="form" autocomplete="off">type OVERLAY</textarea>
+    <span>
+        <input type="checkbox" id="add-second-layout" onchange="showSecondLayout(this.checked)"/>
+        <label for="add-second-layout">Add Second Layout</label><br/>
+    </span>
+    <textarea id="layout2" name="layout2" rows="20" required disabled form="form" autocomplete="off">type OVERLAY</textarea>
+    <input type="submit" value="Download" form="form">
+</div>
 
 <h2>Layout customization</h2>
 <p>
