--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="How to remap Android external keyboard without root">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ExKeyMo - Android external keyboard remapping without root</title>
     <style>
         /* Style it because <code> looks ugly in Ghrome */
